# cachecache

./: .gitignore  CMakeLists.txt  README.md  README.org  build.sh
.build/: .meta_1  CMakeCache.txt  Makefile  callgrind.out.88003  callgrind.out.89407  cmake_install.cmake  kv_store  out
cachecache/: .gitignore  CMakeLists.txt  build.sh  cachelib.patch  clone_cachelib.sh
cachecache/res/: client.toml  config.toml  entity.toml  super.toml
cachecache/src/: client_main.cc  instance_main.cc  main.cc
cachecache/src/cachecache/client/: entity.hh  service.cc  service.hh
cachecache/src/cachecache/instance/: entity.cc  entity.hh  service.cc  service.hh
cachecache/src/cachecache/supervisor/: history.cc  history.hh  market.cc  market.hh  service.cc  service.hh
cachecache/src/cachecache/utils/codes/: request.hh  response.hh
cachecache/src/service/: cachecache.cc  cachecache.hh  generator.cc  generator.hh  market.cc  market.hh  percentile.cc  percentile.hh
cachecache/src/service/clock/: clock.cc  clock.hh
cachecache/src/service/metrics/: metrics.cc  metrics.hh
cachecache/src/service/supervisor/: supervisor.cc  supervisor.hh
cachelib/: CMakeLists.txt  cachelib.patch  clone_cachelib.sh
market/: CMakeLists.txt
market/res/: entity.toml
market/src/: instance_main.cc  main.cc  supervisor_main.cc
market/src/cache/: global.cc  global.hh
market/src/client/: service.hh
market/src/instance/: _.hh  entity.cc  entity.hh  service.cc  service.hh
market/src/supervisor/: history.cc  market.cc  service.cc  service.hh
res/: entity.toml  super.toml
scripts/: bench_client.py
simulation/: CMakeLists.txt
simulation/res/: config_vcpusim.toml
simulation/src/: application.cc  application.hh  generator.cc  generator.hh  main.cc  simulation.cc  simulation.hh
socialNet/analyse/: CMakeLists.txt
socialNet/analyse/src/analyser/: analyser.cc  analyser.hh  cache.cc  cache.hh  cluster.cc  cluster.hh  gatling.cc  gatling.hh  machine.cc  machine.hh  utils.cc  utils.hh
socialNet/analyse/src/tex/figure/: _.hh  axis.cc  axis.hh  base.cc  indexedplot.cc  indexedplot.hh  minipage.cc  minipage.hh  plot.cc  plot.hh  table.cc  table.hh
socialNet/analyse/src/tex/file/: beamer.cc  beamer.hh
socialNet/app/: CMakeLists.txt
socialNet/app/res/: compose.yaml  front.toml  mongo-compose.yaml  registry.toml  services.toml
socialNet/app/test/: registry.cc
socialNet/deploy/res/: all-in-one-no_cache.toml  all-in-one.toml  all-in-one_cachelib.toml  all-in-one_hybrid.toml  all-in-ptero.toml  main.py  two_apps.toml
socialNet/workload/: build.sbt
src/: main.cc  supervisor_main.cc
src/cache/: global.cc  global.hh
src/cache/common/: csts.cc  csts.hh  key.cc  key.hh  value.cc
src/cache/disk/: freelist.cc  freelist.hh  map.cc  map.hh  meta.cc  meta.hh  slab.cc  slab.hh
src/cache/ram/: _.hh  freelist.cc  freelist.hh  lru.cc  meta.cc  meta.hh  slab.cc  slab.hh
src/cachecache/client/: service.cc
src/cachecache/instance/: _.hh  service.cc  service.hh
src/cachecache/supervisor/: _.hh  history.cc  market.cc  market.hh
src/client/: service.cc
src/instance/: entity.cc  entity.hh  service.cc  service.hh
src/memory/: key.cc  key.hh  slab.cc  slab.hh  value.cc  value.hh
src/memory/ram/: meta.cc  meta.hh
src/memory/utils/: csts.cc  csts.hh  free_list.cc  free_list.hh
src/supervisor/: history.hh  market.cc  market.hh  service.cc
tests/: cuckoofilter.cc  wss_estimator.cc
traces/basic_dbs/: desc.org  three_subs_20k.sql
traces/deployments/first_simple/: cachelib.toml  hybrid.toml  hybrid_hdd.toml  no-cache.toml
traces/deployments/four_apps/: cachelib.toml  hybrid.toml  no_cache.toml
traces/deployments/three_apps/: cachelib.toml  hybrid.toml
vagrant/: Vagrantfile
web-apps/socialNet/cpp/: CMakeLists.txt
web-apps/socialNet/cpp/res/: front.toml  registry.toml  services.toml
web-apps/socialNet/cpp/src/: main.cc
web-apps/socialNet/cpp/src/front/: follow.cc  follow.hh  home.cc  home.hh  login.cc  newuser.cc  newuser.hh  service.cc  service.hh  submit.cc  submit.hh  subs.cc  subs.hh  user.cc  user.hh
web-apps/socialNet/cpp/src/registry/: service.cc  service.hh
web-apps/socialNet/cpp/src/services/: _.hh
web-apps/socialNet/cpp/src/services/compose/: service.cc  service.hh
web-apps/socialNet/cpp/src/services/post/: database.cc  database.hh  service.cc  service.hh
web-apps/socialNet/cpp/src/services/short_url/: database.cc  database.hh  service.cc  service.hh
web-apps/socialNet/cpp/src/services/social_graph/: database.cc  database.hh  service.cc  service.hh
web-apps/socialNet/cpp/src/services/text/: service.cc  service.hh
web-apps/socialNet/cpp/src/services/timeline/: database.cc  database.hh  service.cc  service.hh
web-apps/socialNet/cpp/src/services/user/: database.cc  database.hh  service.cc  service.hh
web-apps/socialNet/cpp/src/utils/cache/: client.cc  client.hh  counter.cc  counter.hh
web-apps/socialNet/cpp/src/utils/codes/: response.cc  response.hh
web-apps/socialNet/cpp/src/utils/jwt/: check.cc
web-apps/socialNet/cpp/src/utils/mysql/: client.cc  client.hh
web-apps/socialNet/cpp/test/: front.cc  registry.cc
web-apps/socialNet/deploy/: CMakeLists.txt
web-apps/socialNet/deploy/basic_dbs/: desc.org  zip_subs_20k.sql
web-apps/socialNet/deploy/cpp/: CMakeLists.txt
web-apps/socialNet/deploy/cpp/res/: config.toml  hosts.toml
web-apps/socialNet/deploy/cpp/res/install/: cache.sh  configure.sh  http.sh  rdUtils.sh  socialNet.sh
web-apps/socialNet/deploy/cpp/src/: main.cc
web-apps/socialNet/deploy/cpp/src/deployer/: app.cc  app.hh  cluster.cc  installer.cc  installer.hh  machine.cc  machine.hh
web-apps/socialNet/deploy/res/: all-in-one-no_cache.toml  all-in-one.toml  compose.yaml  hosts.toml  main.py  only-cache.toml
web-apps/socialNet/deploy/src/: main.cc
web-apps/socialNet/deploy/src/deployer/: app.cc  app.hh  cache.cc  cache.hh  cluster.cc  cluster.hh  deployment.cc  deployment.hh  installer.cc  installer.hh  machine.cc  machine.hh
xps/: analyse.py  analyse_compare.py
xps/traces_tests/: traces_1.csv  traces_2.csv
(+1207 files in other folders)
